--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dune – Calculadora de Fuerza</title>
+    <title>Dune – Combat Calculator</title>
     <link rel="icon" type="image/x-icon" href="img/0.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -11,17 +11,17 @@
     <script src="funct.js"></script>
   </head>
   <body>
-    <section class="section">
-      <div class="container has-text-centered">
+    <section class="hero is-dark">
+      <div class="hero-body has-text-centered">
         <h1 class="title">
-          Calculadora de Combate para Dune
+          Combat Calculator
         </h1>
-        <p>
-          Usa esta herramienta para determinar cu&aacute;l n&uacute;mero marcar en la rueda de batalla.
+        <p class="subtitle">
+          for Dune (2019)
         </p>
       </div>
     </section>
-    <section>
+    <section class="section">
       <div class="container">
         <form id="dataform" name="dataform" method="post">
           <center>
@@ -33,17 +33,17 @@
             <div class="column"></div>
             <div class="column is-narrow">
               <div class="field has-text-centered">
-                <label class="label" for="faction">Facci&oacute;n</label>
+                <label class="label" for="faction">Faction</label>
                 <div class="select is-rounded">
                   <select class="has-text-centered" name="faction" id="faction">
-                    <option value="0">Elige tu facci&oacute;n</option>
+                    <option value="0">Select your faction</option>
                     <option value="1">Atreides</option>
                     <option value="2">Bene Gesserit</option>
-                    <option value="7">Cofrad&iacute;a Espacial</option>
-                    <option value="3">Emperador</option>
+                    <option value="3">Emperor</option>
                     <option value="4">Fremen</option>
                     <option value="5">Harkonnen</option>
-                    <option value="6">Ixianos</option>
+                    <option value="6">Ixians</option>
+                    <option value="7">Spacing Guild</option>
                     <option value="8">Tleilaxu</option>
                   </select>
                 </div>
@@ -57,19 +57,19 @@
             <div class="column is-2-tablet is-one-quarter-mobile is-hidden" id="forces-column">
               <div class="field has-text-centered">
                 <input class="input is-rounded is-medium has-text-centered" type="number" step="1" min="0" max="20" name="forces" id="forces">
-                <label id="forces-label" class="label" for="forces">Tropas</label>
+                <label id="forces-label" class="label" for="forces">Forces</label>
               </div>
             </div>
             <div class="column is-2-tablet is-one-quarter-mobile is-hidden" id="stars-column">
               <div class="field has-text-centered">
                 <input class="input is-rounded is-medium has-text-centered" type="number" step="1" min="0" max="0" name="stars" id="stars">
-                <label id="stars-label" class="label" for="stars">Estrellas</label>
+                <label id="stars-label" class="label" for="stars"></label>
               </div>
             </div>
             <div class="column is-2-tablet is-one-quarter-mobile is-hidden" id="spice-column">
               <div class="field has-text-centered">
                 <input class="input is-rounded is-medium has-text-centered" type="number" step="1" min="0" max="0" name="spice" id="spice">
-                <label id="spice-label" class="label" for="spice">Especia</label>
+                <label id="spice-label" class="label" for="spice">Spice</label>
               </div>
             </div>
             <div class="column"></div>
@@ -78,8 +78,8 @@
             <center>
               <label class="checkbox">
                 <input type="checkbox" id="karamaed" name="karamaed">
-                <div class="tooltip">Requerir Especia
-                  <span class="tooltiptext">Tus tropas necesitar&aacute;n especia para aportar toda su fuerza.</span>
+                <div class="tooltip">Spice Support
+                  <span class="tooltiptext">Forces will fight at half strength unless supported by spice.</span>
                 </div>
               </label>
             </center>
@@ -89,7 +89,7 @@
             <div class="column is-2-tablet is-one-third-mobile is-hidden" id="strength-column">
               <div class="field has-text-centered">
                 <input class="input is-rounded is-medium has-text-centered" type="number" min="0" step="0.5" name="strength" id="strength" value="0" readonly>
-                <label id="strength-label" class="label" for="strength">Fuerza</label>
+                <label id="strength-label" class="label" for="strength">Strength</label>
               </div>
             </div>
             <div class="column"></div>
