--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
                     <option value="0">Select your faction</option>
                     <option value="1">Atreides</option>
                     <option value="2">Bene Gesserit</option>
+                    <option value="9">CHOAM</option>
                     <option value="3">Emperor</option>
                     <option value="4">Fremen</option>
                     <option value="5">Harkonnen</option>
                     <option value="6">Ixians</option>
+                    <option value="10">Richese</option>
                     <option value="7">Spacing Guild</option>
                     <option value="8">Tleilaxu</option>
                   </select>
