--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <link rel="icon" type="image/x-icon" href="img/0.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script type="text/javascript" src="funct.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="funct.js"></script>
   </head>
   <body>
@@ -69,26 +68,32 @@
           </div>
           <br>
           <div class="columns is-multiline is-mobile has-text-centered">
+		  
             <div class="column"></div>
+			
             <div class="column is-2-tablet is-one-quarter-mobile is-hidden" id="forces-column">
               <div class="field has-text-centered">
                 <input class="input is-rounded is-medium has-text-centered" type="number" step="1" min="0" max="20" name="forces" id="forces">
                 <label id="forces-label" class="label" for="forces">Forces</label>
               </div>
             </div>
+			
             <div class="column is-2-tablet is-one-quarter-mobile is-hidden" id="stars-column">
               <div class="field has-text-centered">
                 <input class="input is-rounded is-medium has-text-centered" type="number" step="1" min="0" max="0" name="stars" id="stars">
                 <label id="stars-label" class="label" for="stars"></label>
               </div>
             </div>
+			
             <div class="column is-2-tablet is-one-quarter-mobile is-hidden" id="spice-column">
               <div class="field has-text-centered">
                 <input class="input is-rounded is-medium has-text-centered" type="number" step="1" min="0" max="0" name="spice" id="spice">
                 <label id="spice-label" class="label" for="spice">Spice</label>
               </div>
             </div>
+			
             <div class="column"></div>
+			
           </div>
           <div class="is-hidden" id="karamaed-container">
             <center>
@@ -105,11 +110,127 @@
             <div class="column is-2-tablet is-one-third-mobile is-hidden" id="strength-column">
               <div class="field has-text-centered">
                 <input class="input is-rounded is-medium has-text-centered" type="number" min="0" step="0.5" name="strength" id="strength" value="0" readonly>
-                <label id="strength-label" class="label" for="strength">Strength</label>
+                <label id="strength-label" class="label" for="strength">Dialed Strength</label>
               </div>
             </div>
             <div class="column"></div>
           </div>
+		  <div class="columns is-mobile mt-3">
+            <div class="column"></div>
+            <div class="column is-2-tablet is-one-third-mobile is-hidden" id="total-strength-column">
+              <div class="field has-text-centered">
+                <input class="input is-rounded is-medium has-text-centered" type="number" min="0" step="0.5" name="total-strength" id="total-strength" value="0" readonly>
+                <label id="total-strength-label" class="label" for="total-strength">Total Strength</label>
+              </div>
+            </div>
+            <div class="column"></div>
+          </div>
+		<div class="column has-text-centered is-hidden" id="no-leader-column">
+              <div class="field has-text-centered">
+			  <img src="img/leaders/no-leader.png" id="no-leader-button" width="100" height="100" onclick="noleaderclick()">
+              </div>
+            </div>
+		<div class="columns is-multiline is-mobile has-text-centered is-hidden" id="leader-columns">
+		 <div class="column"></div>
+            <div class="column" id="leader1-column">
+              <div class="field has-text-centered">
+			   <img src="" id="leader1-button" width="100" height="100" onclick="leaderclick(1)">
+              </div>
+            </div>
+            <div class="column" id="leader2-column">
+              <div class="field has-text-centered">
+			 <img src="" id="leader2-button" width="100" height="100" onclick="leaderclick(2)">
+              </div>
+            </div>
+            <div class="column" id="leader3-column">
+              <div class="field has-text-centered">
+			  <img src="" id="leader3-button" width="100" height="100" onclick="leaderclick(3)">
+              </div>
+			   </div>
+			<div class="column" id="leader4-column">
+              <div class="field has-text-centered">
+			  <img src="" id="leader4-button" width="100" height="100" onclick="leaderclick(4)">
+              </div>
+			   </div>
+			<div class="column" id="leader5-column">
+              <div class="field has-text-centered">
+			 <img src="" id="leader5-button" width="100" height="100" onclick="leaderclick(5)">
+              </div>
+			   </div>
+			  <div class="column is-hidden" id="leader6-column">
+              <div class="field has-text-centered">
+			 <img src="" id="leader6-button" width="100" height="100" onclick="leaderclick(6)">
+              </div>
+			   </div>
+		<div class="column"></div>
+		</div>
+		<div class="columns is-multiline is-mobile has-text-centered">
+		<div class="column"></div>
+		<div class="column is-hidden" id="cheap-hero-column">
+              <div class="field has-text-centered">
+			  <img src="img/leaders/leader-0.png" width="100" height="100" id="leader0-button" onclick="leaderclick(0)">
+              </div>
+        </div>
+		<div class="column is-hidden" id="captured-leader-column">
+              <div class="field has-text-centered">
+			  <img src="img/leaders/captured-leader.png" width="100" height="100" id="captured-leader-button" onclick="leaderclick(10)">
+              </div>
+        </div>
+				<div class="column is-hidden" id="leader-killed-column">
+              <div class="field has-text-centered">
+			  <img src="img/leaders/leader-killed.png" width="50" height="50" id="captured-leader-button" onclick="leaderclick(99)">
+              </div>
+        </div>
+		<div class="column"></div>
+		</div>
+		<div class="columns is-multiline is-mobile has-text-centered is-hidden" id="faction-columns">
+		 <div class="column"></div>
+		<div class="column" id="faction1-column">
+			<div class="field has-text-centered">
+				<img src="img/1.png" id="faction1-button" width="100" height="100" onclick="factionclick(1)">
+			</div>
+		</div>
+		<div class="column" id="faction2-column">
+			<div class="field has-text-centered">
+				<img src="img/2.png" id="faction2-button" width="100" height="100" onclick="factionclick(2)">
+			</div>
+		</div>
+		<div class="column" id="faction3-column">
+			<div class="field has-text-centered">
+				<img src="img/3.png" id="faction3-button" width="100" height="100" onclick="factionclick(3)">
+			</div>
+		</div>
+		<div class="column" id="faction4-column">
+			<div class="field has-text-centered">
+				<img src="img/4.png" id="faction4-button" width="100" height="100" onclick="factionclick(4)">
+			</div>
+		</div>
+		<div class="column" id="faction6-column">
+			<div class="field has-text-centered">
+				<img src="img/6.png" id="faction6-button" width="100" height="100" onclick="factionclick(6)">
+			</div>
+		</div>
+		<div class="column" id="faction7-column">
+			<div class="field has-text-centered">
+				<img src="img/7.png" id="faction7-button" width="100" height="100" onclick="factionclick(7)">
+			</div>
+		</div>
+		<div class="column" id="faction8-column">
+			<div class="field has-text-centered">
+				<img src="img/8.png" id="faction8-button" width="100" height="100" onclick="factionclick(8)">
+			</div>
+		</div>
+		<div class="column" id="faction9-column">
+			<div class="field has-text-centered">
+				<img src="img/9.png" id="faction9-button" width="100" height="100" onclick="factionclick(9)">
+			</div>
+		</div>
+		<div class="column" id="faction10-column">
+			<div class="field has-text-centered">
+				<img src="img/10.png" id="faction10-button" width="100" height="100" onclick="factionclick(10)">
+			</div>
+		</div>
+		 <div class="column"></div>
         </form>
       </div>
     </section>
