Some Grid Action
Trying to make the layout better for mobile

--- a/index.html
+++ b/index.html
@@ -181,54 +181,34 @@
 			  </div>
 		<div class="column"></div>
 		</div>
-		<div class="columns is-multiline is-mobile has-text-centered is-hidden" id="faction-columns">
-		 <div class="column"></div>
-		<div class="column" id="faction1-column">
-			<div class="field has-text-centered">
+		<div class="grid-container is-hidden" id="faction-grid">
+		<div class="grid-item" id="faction1-column">
 				<img src="img/1.png" id="faction1-button" width="100" height="100" onclick="factionclick(1)">
-			</div>
 		</div>
-		<div class="column" id="faction2-column">
-			<div class="field has-text-centered">
+		<div class="grid-item" id="faction2-column">
 				<img src="img/2.png" id="faction2-button" width="100" height="100" onclick="factionclick(2)">
-			</div>
 		</div>
-		<div class="column" id="faction3-column">
-			<div class="field has-text-centered">
+		<div class="grid-item" id="faction3-column">
 				<img src="img/3.png" id="faction3-button" width="100" height="100" onclick="factionclick(3)">
-			</div>
 		</div>
-		<div class="column" id="faction4-column">
-			<div class="field has-text-centered">
+		<div class="grid-item" id="faction4-column">
 				<img src="img/4.png" id="faction4-button" width="100" height="100" onclick="factionclick(4)">
-			</div>
 		</div>
-		<div class="column" id="faction6-column">
-			<div class="field has-text-centered">
+		<div class="grid-item" id="faction6-column">
 				<img src="img/6.png" id="faction6-button" width="100" height="100" onclick="factionclick(6)">
-			</div>
 		</div>
-		<div class="column" id="faction7-column">
-			<div class="field has-text-centered">
+		<div class="grid-item" id="faction7-column">
 				<img src="img/7.png" id="faction7-button" width="100" height="100" onclick="factionclick(7)">
-			</div>
 		</div>
-		<div class="column" id="faction8-column">
-			<div class="field has-text-centered">
+		<div class="grid-item" id="faction8-column">
 				<img src="img/8.png" id="faction8-button" width="100" height="100" onclick="factionclick(8)">
-			</div>
 		</div>
-		<div class="column" id="faction9-column">
-			<div class="field has-text-centered">
+		<div class="grid-item" id="faction9-column">
 				<img src="img/9.png" id="faction9-button" width="100" height="100" onclick="factionclick(9)">
-			</div>
 		</div>
-		<div class="column" id="faction10-column">
-			<div class="field has-text-centered">
+		<div class="grid-item" id="faction10-column">
 				<img src="img/10.png" id="faction10-button" width="100" height="100" onclick="factionclick(10)">
-			</div>
 		</div>
-		 <div class="column"></div>
 		</div>
 		<div class="columns is-multiline is-mobile has-text-centered is-hidden" id="treachery-columns">
 			<div class="column"></div>
