Added "What is this" page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <p class="subtitle">
           Combat Strength Calculator for Dune (2019)
         </p>
+		<a href="index.html">Calculator</a> | <a href="what.html">What is this?</a>
       </div>
     </section>
     <section class="section">
@@ -265,9 +266,9 @@
       <div class="hero-body has-text-centered">
         <p class="subtitle">
           Find this on <a href="https://github.com/davidscheele/dune-combat-calculator">GitHub</a><br>
-		  Leave suggestions in the comments<br>
+		  <a href="mailto:david@dunecombatcalculator.com">Mail</a> suggestions in the comments<br>
 		  Original calculator by <a href="https://github.com/Erelyks">Erelyks</a><br>
-		  Leaders and treachery card functionality added by <a href="https://github.com/davidscheele">davidscheele</a>
+		  Additional functionality added by <a href="https://github.com/davidscheele">davidscheele</a>
         </p>
       </div>
     </section>
