--- a/what.html
+++ b/what.html
@@ -57,6 +57,22 @@
 	  
 	  <big>Changelog</big>
 	  <br>
+	  <chlogvers>1.4 - 24.05.2023</chlogvers><br>
+	  <ul>
+	  <li>- Added ghola selection for tleilaxu</li>
+	  <li>- Added a remindertext for forces and spice</li>
+	  <li>- Fixed small bug when switching from harkonnen captured leaders to other factions</li>
+	  <li>- Made buttons bigger and restructured forces, starred forces and spice displays</li>
+	  </ul>
+	  <br>
+	  <chlogvers>1.3 - 22.02.2023</chlogvers><br>
+	  <ul>
+	  <li>- Some restructuring of input fields</li>
+	  <li>- Label infos added</li>
+	  <li>- Added plus and minus buttons</li>
+	  <li>- Minor bugs (Ixians did not have total strength, Wanna Yueh was Wanna Marcus, Staban and Esmar Tuek were switched)</li>
+	  </ul>
+	  <br>
 	  <chlogvers>1.2 - 01.02.2023</chlogvers><br>
 	  <ul>
 	  <li>- Added Kwisatz Haderach option for Atreides</li>
@@ -76,8 +92,7 @@
 	  <br>
 	  <big>Todo</big>
 	  <ul>
-	  <li>- <b>Step controls</b>: Increasing and decreasing forces and spice would be way easier on mobile if there were + and - buttons available.</li>
-	<li>- <b>Styling changes</b>: I'm not a web-designer and as such my css stylings may be pretty crap for mobile devices. That could be improved I bet. As it is, it works on my desktop and my mobile phone.</li>
+	 <li>- <b>Styling changes</b>: I'm not a web-designer and as such my css stylings may be pretty crap for mobile devices. That could be improved I bet. As it is, it works on my desktop and my mobile phone.</li>
 	<li>- <b>Nicer leader icons</b>: The icons that are in it now are fine, but they could be better and for some factions are hard to read. I can't use scans of the original because I would probably run into copyright problems. I want to keep the shape and style of the originals though to help with fast recognition in the game.</li>
 	<li>- <b>Basic mode</b>: These options are for advanced mode and that was the whole reason for Erelyks to create the base-page. Now I aspire that this could replace the battle wheel all together and as such it would need a basic mode switch.</li>
 	  </ul>
