--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <title>Dune – Combat Calculator</title>
     <link rel="icon" type="image/x-icon" href="img/0.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" href="devstyles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="devfunct.js"></script>
+    <script src="funct.js"></script>
   </head>
   <body>
     <section class="hero is-dark" id="banner">
