Piter value change and visuals
- Piter De Vries was mistakenly valued at 4, is now correct at 3
- Made strength and total strength values labels and made total stength stand out a lot more

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="columns is-multiline is-mobile has-text-centered is-centered">
             <div class="column is-one-third-tablet is-two-thirds-mobile is-hidden" id="strength-column">
               <div class="field has-text-centered">
-                <input class="input is-rounded has-text-centered" name="strength" id="strength" value="0" readonly>
+				<label id="strength" class="label">0</label>
                 <label id="strength-label" class="label" for="strength">Dialed Strength<br>(Forces + Spice Support)</label>
               </div>
             </div>
@@ -129,7 +129,7 @@
 		  <div class="columns is-multiline is-mobile has-text-centered is-centered">
             <div class="column  is-one-third-tablet is-two-thirds-mobile is-hidden" id="total-strength-column">
               <div class="field has-text-centered">
-                <input class="input is-rounded has-text-centered" name="total-strength" id="total-strength" value="0" readonly>
+				<label id="total-strength" class="label big">0</label>
                 <label id="total-strength-label" class="label" for="total-strength">Total Strength<br>(Dialed Strength + Leader)</label>
               </div>
             </div>
