--- a/what.html
+++ b/what.html
@@ -57,6 +57,12 @@
 	  
 	  <big>Changelog</big>
 	  <br>
+	  <chlogvers>1.5 - 13.07.2023</chlogvers><br>
+	  <ul>
+	  <li>- Piter De Vries was mistakenly valued at 4, is now correct at 3</li>
+	  <li>- Made strength and total strength values labels and made total stength stand out a lot more</li>
+	  </ul>
+	  <br>
 	  <chlogvers>1.4 - 24.05.2023</chlogvers><br>
 	  <ul>
 	  <li>- Added ghola selection for tleilaxu</li>
