--- a/what.html
+++ b/what.html
@@ -57,6 +57,12 @@
 	  
 	  <big>Changelog</big>
 	  <br>
+	  <chlogvers>1.6 - 19.10.2023</chlogvers><br>
+	  <ul>
+	  <li>- Added Ecaz & Moritani factions, icons created by <a href="https://de.fiverr.com/mei_und_mao">Anja</a></li>
+	  <li>- Added Ecaz ally combat support </li>
+	  </ul>
+	  <br>
 	  <chlogvers>1.5 - 13.07.2023</chlogvers><br>
 	  <ul>
 	  <li>- Piter De Vries was mistakenly valued at 4, is now correct at 3</li>
@@ -101,6 +107,8 @@
 	 <li>- <b>Styling changes</b>: I'm not a web-designer and as such my css stylings may be pretty crap for mobile devices. That could be improved I bet. As it is, it works on my desktop and my mobile phone.</li>
 	<li>- <b>Nicer leader icons</b>: The icons that are in it now are fine, but they could be better and for some factions are hard to read. I can't use scans of the original because I would probably run into copyright problems. I want to keep the shape and style of the originals though to help with fast recognition in the game.</li>
 	<li>- <b>Basic mode</b>: These options are for advanced mode and that was the whole reason for Erelyks to create the base-page. Now I aspire that this could replace the battle wheel all together and as such it would need a basic mode switch.</li>
+	<li>- <b>Homeworlds</b>: The latest expansion Ecaz & Moritani brought a new homeworlds module to the game. That changes some things sometimes, which will be accounted for.</li>
+	<li>- <b>E&M Treachery</b>: The latest treachery cards can sometimes alter the battle values. Needs to be implemented.</li>
 	  </ul>
 	  </section>
   </body>
