Added Reinforcement and Harass&Withdraw Treachery Cards

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
 				 <div class="grid-pack-plus"><img src="img/plusbutton.png" id="plus-button" onclick="plustrigger('forces')"></div>
 				 <div class="grid-pack-label"><label id="forces-label" class="label">Forces</label></div>
 			  <div class="grid-pack-minus"><img src="img/minusbutton.png" id="minus-button" onclick="minustrigger('forces')"></div>
+			  <div class="grid-pack-label2"><label id="forces-label2" class="label is-hidden">Undialed forces are<br />returned to reserves</label></div>
+			   <div class="grid-pack-label3"><label id="forces-label3" class="label is-hidden">3 forces from<br />reserves to tanks</label></div>
 			  </div>
+			  
 			</div>
 			
             <div class="column is-hidden" id="stars-column">
@@ -253,12 +256,14 @@
 							<option value="14">Poison Blade</option>
 							<option value="15">Weirding Way</option>
 							<option value="16">Chemistry</option>
-							<option value="17">Baliset (Worthless)</option>
-							<option value="18">Jubba Cloak (Worthless)</option>
-							<option value="19">Kull Wahad (Worthless)</option>
-							<option value="20">Kulon (Worthless)</option>
-							<option value="21">La, La, La (Worthless)</option>
-							<option value="22">Trip to Gamont (Worthless)</option>
+							<option value="17">Harass & Withdraw</option>
+							<option value="18">Reinforcements</option>
+							<option value="19">Baliset (Worthless)</option>
+							<option value="20">Jubba Cloak (Worthless)</option>
+							<option value="21">Kull Wahad (Worthless)</option>
+							<option value="22">Kulon (Worthless)</option>
+							<option value="23">La, La, La (Worthless)</option>
+							<option value="24">Trip to Gamont (Worthless)</option>
 						</select>
 					</div>
 				</div>
@@ -277,12 +282,14 @@
 							<option value="3">Chemistry</option>
 							<option value="4">Shield Snooper</option>
 							<option value="5">Weirding Way</option>
-							<option value="6">Baliset (Worthless)</option>
-							<option value="7">Jubba Cloak (Worthless)</option>
-							<option value="8">Kull Wahad (Worthless)</option>
-							<option value="9">Kulon (Worthless)</option>
-							<option value="10">La, La, La (Worthless)</option>
-							<option value="11">Trip to Gamont (Worthless)</option>
+							<option value="6">Harass & Withdraw</option>
+							<option value="7">Reinforcements</option>
+							<option value="8">Baliset (Worthless)</option>
+							<option value="9">Jubba Cloak (Worthless)</option>
+							<option value="10">Kull Wahad (Worthless)</option>
+							<option value="11">Kulon (Worthless)</option>
+							<option value="12">La, La, La (Worthless)</option>
+							<option value="13">Trip to Gamont (Worthless)</option>
 						</select>
 					</div>
 				</div>
