--- a/what.html
+++ b/what.html
@@ -57,6 +57,12 @@
 	  
 	  <big>Changelog</big>
 	  <br>
+	  <chlogvers>1.7.1 - 07.04.2024</chlogvers><br>
+	  <ul>
+	  <li>- Staban and Esmar Tuek were switched.... again</li>
+	  <li>- Switched Plus and Minus Buttons around based on user feedback
+	  </ul>
+	  <br>
 	  <chlogvers>1.7 - 17.11.2023</chlogvers><br>
 	  <ul>
 	  <li>- Added Reinforcements and Harass & Withdraw Treachery cards</li>
